<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/color_blue">

            <ImageView
                android:id="@+id/imageview_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_10"
                android:src="@mipmap/back" />


            <TextView
                style="@style/style_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/text_title_signup" />

        </RelativeLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_profile"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@mipmap/default_pic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/form_margin"
            android:layout_marginRight="@dimen/form_margin"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edittext_name"
                style="@style/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/edittext_style"
                android:hint="@string/text_hint_name1"
                android:inputType="text"
                android:textColorHint="@color/colorBlack" />


            <EditText
                android:id="@+id/edittext_email"
                style="@style/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/edittext_style"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorBlack" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/Spinner_country_codes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_weight="3"
                    android:background="@drawable/edittext_style"
                    android:padding="5dp"
                    android:spinnerMode="dropdown" />


                <EditText
                    android:id="@+id/edittext_contactnumber"
                    style="@style/style_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/text_hint_phonenumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColorHint="@color/colorBlack" />
            </LinearLayout>

            <EditText
                android:id="@+id/edittext_password"
                style="@style/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/edittext_style"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColorHint="@color/colorBlack" />


            <EditText
                android:id="@+id/edittext_confirmpassword"
                style="@style/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@drawable/edittext_style"
                android:hint="@string/text_hint_confirmpassword"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColorHint="@color/colorBlack" />


            <Button
                android:id="@+id/button_create_account"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin_20"
                android:background="@mipmap/btn_bg"
                android:text="@string/text_button_createaccount"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>


</ScrollView>