<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"

            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textview_dialog_title"
                style="@style/style_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_title_forgotpassword"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:background="@mipmap/close"
                android:id="@+id/imgView_close" />
        </RelativeLayout>

        <TextView
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/text_display"
            android:textColor="@color/colorBlack" />


        <EditText
            android:id="@+id/edittext_email_forgotpassword"
            style="@style/style_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="@drawable/edittext_style"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sendpassword"
                style="@style/style_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@mipmap/btn_bg"
                android:text="@string/text_button_sendpassword"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>