<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/color_blue">

        <ImageView
            android:id="@+id/imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_10"
            android:src="@mipmap/back" />

        <TextView
            style="@style/style_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_title_Profile" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_profile"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:src="@mipmap/default_pic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_20"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edittext_name"
                    style="@style/style_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/edittext_style"
                    android:inputType="text"
                    android:text="John Swanson"
                    android:textColorHint="@color/colorBlack" />


                <TextView
                    android:id="@+id/edittext_email"
                    style="@style/style_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/edittext_style"

                    android:text="watson@gmail.com"
                    android:textColorHint="@color/colorBlack" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/Spinner_country_codes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_weight="3"
                        android:background="@drawable/edittext_style"
                        android:padding="5dp"
                        android:spinnerMode="dropdown" />


                    <EditText
                        android:id="@+id/edittext_contactnumber"
                        style="@style/style_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1.5"
                        android:background="@drawable/edittext_style"
                        android:hint="@string/text_hint_phonenumber"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColorHint="@color/colorBlack" />
                </LinearLayout>


                <TextView
                    android:id="@+id/textview_changePassword"
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Change_password" />


                <Button
                    android:id="@+id/button_update_profile"
                    android:layout_width="@dimen/button_width_follow"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@mipmap/btn_bg"
                    android:text="@string/text_update"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_home_footer"
                android:layout_marginBottom="5dp"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
