<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_blue"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <!--This is for custom toolbar-->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/text_Followmate"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/xlarge_text_size" />


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="#FFF"
        android:orientation="vertical"
        tools:context="com.inscripts.cometchat_sdkdemo.UsersListActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_individual_chat"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/text_individual_chat"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_group_chat"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/text_group_chat"
                android:textAllCaps="false"
                android:textColor="@color/color_blue"
                android:textStyle="bold" />
        </LinearLayout>


        <ListView
            android:id="@+id/listViewUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>